# cgv-web

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  CGV_Web_Documentation.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  atlas_viewer.html  build-rpm.sh  build.bat  cgv-web.spec  deploy.bat  eslint.config.js  eslint.config.mjs  find_unmapped_cells.mjs  generate_mock_data.py  generate_project_docs.py  index.html  kristoffer.html  lar_em_analysis.txt  lar_em_be1_s1.txt  main.js  optimize_glb.mjs  package-lock.json  package.json  root2scene.mjs  run-server.ps1  run.bat  run.sh  serve.py  server.py  setup.mjs  stats_be1_s1_eta0.mjs  stats_be1_s1_eta0.txt  style.css  tour.js  tsconfig.json  (+2 more)
.claude/: settings.local.json
CaloGeoView/: CaloBuild.C  CaloGeoConst.h  CaloGeoGUI.C  CaloGeoInterface.C  CaloGeoInterface.h  CaloGeoXML.C  CaloGeoXML.h  CaloHough.C  CaloHough.h  CaloInfo.C  CaloInfo.h  run.C
const/: CaloBuild.C  CaloGeoConst.h
css/: cinema.css  floating.css  hud.css  loading.css  log.css  mobile.css  panel-right.css  style.css  toolbar.css
debug/: compare_lar_ids_with_cgv.mjs  decode_lar.mjs  find_unmapped_cells.mjs  inspect_missing.mjs  map_lar_cells.mjs  stats_be1_s1_eta0.mjs
default_xml/: index.json
docs/: CGV_WEB_Documentation.html  LINUX_BUILD.md  TODO.md  fabio.txt  generate_docs_pdf.py
examples/: atlas_guide.html  (+3 more)
parser/: Cargo.toml
parser/.cargo/: config.toml
parser/pkg/: atlas_id_parser.d.ts  atlas_id_parser.js  atlas_id_parser_bg.wasm  atlas_id_parser_bg.wasm.d.ts  package.json
parser/src/: lib.rs  xml_parser.rs
(+188 files in other folders)
